# Calendar

./: CMakeLists.txt  CalendarWidget.qml  Event.qml  FileHandler.h  Main.qml  Resource.qrc  UpdateCalendar.qml  main.cpp
